# almacen

./: README.md  compiler.iss  pyproject.toml  test.py
src/: almacen.db  almacen.db-shm  almacen.db-wal  components.py  database.py  database_demo.py  helpers.py  main.py
src/reportes/: 20250919T172240_DOC1_OUT_312321.csv  20250919T175826_DOC1_OUT_321312.csv  20250919T181705_DOC5_IN_32321.csv  20250919T182047_DOC6_IN_321321.csv  20250919T182120_DOC7_OUT_21321.csv  20250919T190119_DOC1_IN_12345.csv  20250919T190149_DOC2_OUT_312423.csv  20250919T221714_DOC1_OUT_312321.csv  20250922T145818_DOC1_OUT_321312.csv  20250922T205227_DOC4_OUT_321312321.csv  20250923T001313_DOC5_IN_reporte.csv  20250923T144958_DOC6_OUT_3123123.csv  20250923T191633_DOC7_OUT_232131.csv  20250923T191655_DOC8_OUT_312321.csv  20250923T191719_DOC9_IN_321321312.csv  20250923T192057_DOC10_IN_321312.csv  20250923T203216_DOC11_OUT_1234567890.csv  20250923T225651_DOC1_IN_2121312.csv  20250923T231951_DOC2_IN_0001.csv  20250923T233535_DOC3_OUT_312312.csv  20250923T233602_DOC4_OUT_31231.csv  20250924T000730_DOC5_IN_21131.csv
